# python-xlab

./: .buildinfo  .gitignore  README.md  experiments.html  genindex.html  index.html  intro.html  license.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg
.github/workflows/: install.yml
_modules/: index.html
_modules/experiments/: experiment.html
_modules/instruments/manufacturers/agilent/: a33220.html  a335xx.html  a33xxx.html  a34xxx.html
_modules/instruments/manufacturers/lecroy/: oscilloscope.html
_modules/instruments/manufacturers/mitutoyo/: usb_itn.html
_modules/instruments/manufacturers/rohdeschwarz/: sml01.html
_modules/instruments/manufacturers/tti/: ld400.html  pl303.html
_modules/xlab/experiments/: experiment.html
_sources/: index.rst.txt
_sources/instruments/: general.rst.txt  instruments.rst.txt
docsrc/: Makefile  README.txt  builddoc.py  conf.py  experiments.rst  intro.rst  license.rst  lint.py  make.bat
docsrc/instruments/: instruments.rst
instruments/: general.html  instruments.html
instruments/manufacturers/agilent/: a33220.html  a335xx.html  a34xxx.html
instruments/manufacturers/lecroy/: hdo6xxx.html  ws104.html
instruments/manufacturers/mitutoyo/: usb_itn.html
instruments/manufacturers/rohdeschwarz/: sml01.html
instruments/manufacturers/tti/: ld400.html  pl303.html
instruments/manufacturers/velleman/: k8090.html
src/xlab/: __init__.py
src/xlab/experiments/: __init__.py  _test.py  conditions.py  util.py
src/xlab/instruments/: __init__.py  interface.py
xlab/: __init__.py
xlab/experiments/: __init__.py  _test.py  conditions.py  experiment.py  logger.py  plotter.py  util.py
xlab/instruments/: __init__.py  interface.py
xlab/instruments/backends/: serialport.py  visa.py
xlab/instruments/manufacturers/: __init__.py
(+52 files in other folders)
