[metadata]
name = xlab
version = 0.0.1
url = https://github.com/DEMCON/python-xlab
author = DEMCON
description = Xlab is a Python module that facilitates performing lab experiments
long_description = file: README.md
long_description_content_type = text/markdown
keywords = measure, instrument
license = BSD-v3
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
packages = xlab
install_requires =
    pyvisa<1.12.0
    numpy
    PySide2
    pyserial
